tests/test_input_files/good/test_good_expression_8.punkt
main {
  var a = 1 / 0.
  println a.
}
