tests/test_input_files/bad/test_bad_expression_1.punkt
main {
	var a = !0.
}
